samples/_failures_safe/1761259443_a9ed39_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f0c8505.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_5f0c8505.c:143:49: error: expected ‘]’ at end of input
  143 |         else printf("Vertex %d: %d\n", i, dist[i
      |                                                 ^
      |                                                 ]
./samples/SAFE/__tmp_5f0c8505.c:143:9: error: expected declaration or statement at end of input
  143 |         else printf("Vertex %d: %d\n", i, dist[i
      |         ^~~~
./samples/SAFE/__tmp_5f0c8505.c:143:9: error: expected declaration or statement at end of input
